# iq_eq_tests

./: .gitignore  README.md  pyproject.toml
iq_tests/: manage.py
iq_tests/apps/api/: fields.py  serializers.py  urls.py  utils.py  views.py
iq_tests/apps/verification/: models.py
iq_tests/apps/verification/migrations/: 0001_initial.py
iq_tests/iq_tests/: asgi.py  settings.py  wsgi.py
